Updated about page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -12,7 +12,7 @@ import Layout from '../components/Layout'
 
 # Youngjae Jay Lim
 
-### Full-Stack Software Engineer/Data Analyst
+### Full-Stack Web Developer/Data Analyst
 
 | Contact        |                                                                    |
 | -------------- | ------------------------------------------------------------------ |
@@ -24,7 +24,7 @@ import Layout from '../components/Layout'
 # ✍️Summary
 
 <blockquote display='default'>
-  I am a full stack software engineer as well as a data analyst in NYC who is
+  I am a full stack web developer as well as a data analyst in NYC who is
   seeking remote/freelancing/full-time opportunities. I am passionate about
   building full-stack applications using variety of tools as well as collecting,
   processing, exploring, and publishing data and building anything involving
@@ -66,7 +66,7 @@ import Layout from '../components/Layout'
 
 - Worked with a variety of different programming languages, frameworks, and content manage systems(`CMS`) such as JavaScript, React, Next.js, Svelte, SvelteKit, Vue, Node.js, Express.js Prismic, WordPress, Contentful, Sanity.io, Strapi
 
-- Built Back-end APIs following `RESTful` standards `Express.js` & `MongoDB Atalas Cloud` to allow users to create job applications that they applied and keep track of them using `useReducer` hooks + `Context` in `React` instead of `Redux`
+- Built Back-end APIs following `RESTful` standards, `Express.js` & `MongoDB Atalas Cloud` to allow users to create job applications that they applied and keep track of them using `useReducer` hooks + `Context` in `React` instead of `Redux`
 
 - Developed a full-stack web application to create/manage events using `Next.js` and `Strapi` CMS backend
 
@@ -76,9 +76,9 @@ import Layout from '../components/Layout'
 
 - Created a full-stack web E-Commerce application using `Go` & `Stripe` that consists of multiple, separate applications:
 
-  - a virtual terminal whose authenciated user is able to process credit card payments from a secure form with the `Stripe` API
+  - a virtual terminal whose an authenticated user is able to process credit card payments from a secure form with the `Stripe` API
   - a front-end web application that allows a user to purchase a product, or purchase a recurring monthly subscription
-  - microservice that performs only one task, but performs very well, dynamically building PDF invoices and sending them to custormers as an email attachment
+  - microservice that performs only one task, but performs very well, dynamically building PDF invoices and sending them to customers as an email attachment
 
 - Built a `Gosnel` web framework using `Go` programming language that is very similar to Laravel PHP Web Framework to speed up full-stack web application development process for future clients
 
@@ -103,7 +103,7 @@ The relavant projects are linked here: [Projects](/projects)
 - Built up solid understanding of relational database, multi-dimensional database, and Star
   Schema from the per:webspective of Business Intelligence Tool
 
-#### Techinical :
+#### Technical :
 
 - Managed a team consisting of database developers, actuaries to build a full-stack life insurance compliance reporting-system
   - Programmed `Transact-SQL` stored-procedures to automate syntax, validation checks on individual
@@ -158,7 +158,7 @@ The relavant projects are linked here: [Projects](/projects)
 | JavaScript | `React`, `Gatsby`, `Svelte`, `SvelteKit`, `Next.js`, `Node.js`, `Express.js` |
 | Python     | `Django`, `FastAPI`                                                          |
 | Go         | `Gosnel`(framework that I am currently making in progress)                   |
-| CSS        | `Bootstrap`, `Tailwind CSS`, `Semantic UI`                                   |
+| CSS        | `PostCSS`, `Bootstrap`, `Tailwind CSS`, `Semantic UI`                        |
 
 ## Tools & Platforms
 
