--- a/src/posts/2022-02-24-Datasette/post.mdx
+++ b/src/posts/2022-02-24-Datasette/post.mdx
@@ -4,7 +4,7 @@ slug: datasette
 image: ./images/main.png
 date: 2022-02-24
 author: youngjae lim
-published: true
+published: false
 category: Data
 tags: ['data', 'tool', 'python']
 readTime: 50
