Updated about.mdx to add web server skills

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -149,7 +149,7 @@ The relavant projects are linked here: [Projects](/projects)
 
 ## Programming lauguages
 
-`Go`, `GraphQL` `JavaScript(ES6)`, `HTML`, `CSS`, `Python`, `SQL`, `Rust`, `VBScript`, `VBA`, `PHP`, `R`
+`Go`, `GraphQL` `JavaScript(ES6)`, `PHP`, `HTML`, `CSS`, `Python`, `SQL`, `Rust`, `VBScript`, `VBA`, `R`
 
 ## Libraries & Framewokrs
 
@@ -164,11 +164,13 @@ The relavant projects are linked here: [Projects](/projects)
 
 | Category                       | Tools & Platforms                                                                                                                           |
 | ------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------- |
-| Code Editing                   | `Vim`, `VS Code`                                                                                                                            |
+| Code Editor                    | `Vim`, `VS Code`                                                                                                                            |
 | Cloud                          | `AWS`, `Google Cloud Platform`, `Heroku`, `Digital Ocean`, `Linode`, `Netlify`, `Vercel`, `Gatsby Cloud`, `MongoDB Atlas Cloud`, `Supabase` |
 | DevOps                         | `Git`, `GitHub`, `Docker`, `Kubernetes`                                                                                                     |
 | CMS(Content Management System) | `WordPress`, `Prismic`, `Sanity.io`, `Contentful`, `Strapi`                                                                                 |
+| API Testing                    | `Postman`                                                                                                                                   |
 | OS(Operating Systems)          | `Windows`, `Unix`, `Linux`, `MacOS`                                                                                                         |
+| Web Servers                    | `Apache`, `Nginx`, `Caddy`                                                                                                                  |
 
 ## Databases
 
